<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/old_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/grey"
        android:hint="@string/text_old_password" />

    <EditText
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/grey"
        android:hint="@string/text_new_password" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/text_confirm_password"
        android:textColor="@color/colorText"
        android:textColorHint="@color/grey" />

    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:text="@string/text_change_password"
        android:textColor="@color/accent" />

</LinearLayout>