<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fm.radiokids.fragments.DetailsFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_chat_logo" />

                    <Switch
                        android:id="@+id/chat_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="false"
                        android:enabled="true"
                        android:text="@string/text_chat_in_fullscreen_mode"
                        android:textColor="@color/colorText"
                        tools:checked="false" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/text_kidsfm_social_links"
                        android:textColor="@color/grey" />

                    <LinearLayout
                        android:id="@+id/go_youtube"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:tag="youtube">

                        <ImageView
                            android:id="@+id/youtube_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/ic_youtube_logo" />

                        <TextView
                            android:id="@+id/text_youtube"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/text_youtube"
                            android:textColor="@color/colorText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/go_instagram"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/instagram_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/ic_instagram_logo" />

                        <TextView
                            android:id="@+id/text_instagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/text_instagram"
                            android:textColor="@color/colorText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/go_vk"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/vk_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/ic_vk_logo" />

                        <TextView
                            android:id="@+id/text_vk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/text_vk"
                            android:textColor="@color/colorText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/go_ok"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/ok_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/ic_ok_logo" />

                        <TextView
                            android:id="@+id/text_ok"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/text_ok"
                            android:textColor="@color/colorText" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/go_site"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@drawable/ripple"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/www_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/ic_www_logo" />

                        <TextView
                            android:id="@+id/go_to_site"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/drawer_item_go_to_site"
                            android:textColor="@color/colorText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/go_contacts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@drawable/ripple"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"

                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/contacts_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/ic_contacts_logo" />

                        <TextView
                            android:id="@+id/contacts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/drawer_item_contacts"
                            android:textColor="@color/colorText" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/go_about"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@drawable/ripple"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/info_logo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/ic_info_logo" />

                        <TextView
                            android:id="@+id/about"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.9"
                            android:text="@string/drawer_item_about"
                            android:textColor="@color/colorText" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
